latex2mmlc/src/snapshots/latex2mmlc__tests__sub_superscript.snap
---
source: latex2mmlc/src/lib.rs
expression: x^2_3
---
<math>
    <msubsup>
        <mi>x</mi>
        <mn>3</mn>
        <mn>2</mn>
    </msubsup>
</math>
