latex2mmlc/src/snapshots/latex2mmlc__tests__sum_pointless_limits.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\sum\\limits n"
---
<math>
    <mo movablelimits="false">∑</mo>
    <mi>n</mi>
</math>
