latex2mmlc/src/snapshots/latex2mmlc__tests__sum_prime.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\sum'"
---
<math>
    <mover>
        <mo>∑</mo>
        <mo>′</mo>
    </mover>
</math>
