latex2mmlc/src/snapshots/latex2mmlc__tests__sum_with_special_symbol.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\sum_{i = 0}^∞ i"
---
<math>
    <munderover>
        <mo>∑</mo>
        <mrow>
            <mi>i</mi>
            <mo>=</mo>
            <mn>0</mn>
        </mrow>
        <mi mathvariant="normal">∞</mi>
    </munderover>
    <mi>i</mi>
</math>
