latex2mmlc/src/snapshots/latex2mmlc__tests__sup_sup.snap
---
source: latex2mmlc/src/lib.rs
expression: x^2^3 y
---
Position: 3
CannotBeUsedHere {
    got: Circumflex,
    correct_place: AfterOpOrIdent,
}
