latex2mmlc/src/snapshots/latex2mmlc__tests__super_subscript.snap
---
source: latex2mmlc/src/lib.rs
expression: x_3^2
---
<math>
    <msubsup>
        <mi>x</mi>
        <mn>3</mn>
        <mn>2</mn>
    </msubsup>
</math>
