latex2mmlc/src/snapshots/latex2mmlc__tests__super_then_prime.snap
---
source: latex2mmlc/src/lib.rs
expression: "f^2'"
---
LatexError(
    3,
    CannotBeUsedHere {
        got: Prime,
        correct_place: AfterOpOrIdent,
    },
)
