latex2mmlc/src/snapshots/latex2mmlc__tests__superscript.snap
---
source: latex2mmlc/src/lib.rs
expression: x^2
---
<math>
<msup>
    <mi>x</mi>
    <mn>2</mn>
</msup>
</math>
