latex2mmlc/src/snapshots/latex2mmlc__tests__text.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\text{hi}xx"
---
<math>
    <mtext>hi</mtext>
    <mi>x</mi>
    <mi>x</mi>
</math>
