latex2mmlc/src/snapshots/latex2mmlc__tests__text_multi_space.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\text{x   y}"
---
<math>
    <mtext>x y</mtext>
</math>
