latex2mmlc/src/snapshots/latex2mmlc__tests__text_nested.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\text{ \\text{a}}"
---
<math>
    <mtext> a</mtext>
</math>
